--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="navbar">
@@ -32,10 +33,22 @@
     <div class="information">
         <div class="information-title"><b>Some Random Information</b></div>
         <div class="information-images">
-            <div class="illustration"><div class="text">This is some subtext unter illustration or image</div></div>
-            <div class="illustration"><div class="text">This is some subtext unter illustration or image</div></div>
-            <div class="illustration"><div class="text">This is some subtext unter illustration or image</div></div>
-            <div class="illustration"><div class="text">This is some subtext unter illustration or image</div></div>
+            <div class="information-card">
+                <div class="illustration"></div>
+                <div class="text">this is some subtext under illustration or image</div>
+            </div>
+            <div class="information-card">
+                <div class="illustration"></div>
+                <div class="text">this is some subtext under illustration or image</div>
+            </div>
+            <div class="information-card">
+                <div class="illustration"></div>
+                <div class="text">this is some subtext under illustration or image</div>
+            </div>
+            <div class="information-card">
+                <div class="illustration"></div>
+                <div class="text">this is some subtext under illustration or image</div>
+            </div>
         </div>
     </div>
 
