added css stylesheet

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="navbar">
-        <div class="logo"><em>Header Logo</em></div>
+        <div class="logo">Header Logo</div>
         <ul>
           <li><a href="#">header link one</a></li>
           <li><a href="#">header link two</a></li>
@@ -23,7 +23,7 @@
             <h1 class="hero-title">This Website is Awesome</h1>
             <div class="hero-para">This website has some subtext that goes here under the main title.It's a smaller font and the color is lower contrast. 
             </div>
-            <button> <b>sign up</b> </button>
+            <div class="hero-button"><button> <b>sign up</b> </button></div>
         </div>
         <div class="hero-right" >
             <img src="images/hero.jpg" alt="futuristic car" height="auto"  width="500px">
@@ -35,39 +35,43 @@
         <div class="information-images">
             <div class="information-card">
                 <div class="illustration"></div>
-                <div class="text">this is some subtext under illustration or image</div>
+                <div class="text">this is some subtext <br> under illustration <br> or image</div>
             </div>
             <div class="information-card">
                 <div class="illustration"></div>
-                <div class="text">this is some subtext under illustration or image</div>
+                <div class="text">this is some subtext <br> under illustration <br> or image</div>
             </div>
             <div class="information-card">
                 <div class="illustration"></div>
-                <div class="text">this is some subtext under illustration or image</div>
+                <div class="text">this is some subtext <br> under illustration <br> or image</div>
             </div>
             <div class="information-card">
                 <div class="illustration"></div>
-                <div class="text">this is some subtext under illustration or image</div>
+                <div class="text">this is some subtext <br> under illustration <br> or image</div>
             </div>
         </div>
     </div>
 
     <div class="quote-section">
        <div class="quote"><em>This is an inspiring quote or a testimonial from a customer.Maybe it's just filling up space or maybe people will actually read it, Who knows? All i know is that it looks nice. </em></div>
-       <div class="quote-by">Thor,God of Thunder</div>
+       <div class="quote-by"> - Thor,God of Thunder</div>
     </div>
 
     <div class="call-to-action">
         <div class="call-box-blue">
             <div class="call-left">
-                <div class="call-main"><b>Call to action! it's time </b></div>
+                <div class="call-main"><b>Call to action! it's time! </b></div>
                 <div class="call-text">sign up for our product by clicking the button right over there!</div>
             </div>
+            <div class="call-right">
             <button>sign up</button>
+        </div>
         </div>
     </div>
 
-    <div class="footer">Copyright &copy The Odin Project 2021</div>
+    <div class="footer">
+      <div class="text-foot"> Copyright &copy The Odin Project 2021</div> 
+    </div>
 
 
 </body>
